Fix templating bug

--- a/templates/singleton.html
+++ b/templates/singleton.html
@@ -1,5 +1,5 @@
 <script>
-{{sha256.js}}
+{{sha256.min.js}}
 
 // This is defined so that when you use this page to generate new pages, the app inserts the latest version of the JS code
 sha256.jsCode = {{json:sha256.min.js}};
